crates/parser/tests/cases/snapshots/cases__errors__stmt_vardecl_tuple.snap
---
source: parser/tests/cases/errors.rs
expression: "err_string(stringify!(stmt_vardecl_tuple), functions::parse_stmt, true,\n           \"(a, x+1) : u256\")"

---
error: failed to parse variable declaration
  ┌─ stmt_vardecl_tuple:1:5
  │
1 │ (a, x+1) : u256
  │     ^^^ invalid variable declaration target
  │
  = The left side of a variable declaration can be either a name
    or a non-empty tuple.


